--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -37,10 +37,10 @@
 
                 <!--if image is False/None/non-existent, then default to error message-->
                 <img
-                    scr="{{ mars.featuredImage | default('static/images/error.png', true)}}"
+                    src="{{ mars.featuredImage | default('static/images/error.png', true)}}"
                     class="img-responsive"
                     alt="Responsive image"
-                />
+                >
             </div>
             <div class="col-md-4">
                 <!--Mars Facts-->
@@ -60,7 +60,7 @@
             {% for hemisphere in mars.hemispheres %}
             <div class="col-md-3">
                 <div class ="thumbnail">
-                    <img scr="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+                    <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
                     <div class="caption">
                         <h3>{{hemisphere.title}}</h3>
                     </div>
